fix issue with logo on tablet screens

--- a/source/stylesheets/partials/_nav.scss
+++ b/source/stylesheets/partials/_nav.scss
@@ -53,6 +53,10 @@ header.navigation {
       padding-top: .9em;
       font-size: 0.8em;
       @include media($medium-screen) {
+        padding-top: 1.2em;
+        font-size: 1em;
+      }
+      @include media($large-screen) {
         padding-top: .5em;
         font-size: 1.5em;
       }
